Alteraçao no opacity no style.css e alteraçao no parágrafo no html

--- a/PROJETO-CSS/index.html
+++ b/PROJETO-CSS/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <section class="container-left">
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, quas itaque, non, reiciendis repellendus distinctio dignissimos dolores maxime a adipisci provident ipsam recusandae eum? Quam commodi iusto nemo quod iste?</p>
+            <p>lorem ddfassaasfa</p>
             <button>Get Started</button>
         </section>
         <section class="container-right">
