Alteraçao no title index.hrml

--- a/BRINCANDO.CSS/index.html
+++ b/BRINCANDO.CSS/index.html
@@ -27,6 +27,6 @@
                   <p>Nike, Inc. is and American multinational</p>
                   <div class="text"></div>
                   <button class="btn">Buy</button>
-                </div> Now
+                </div> 
 </body>
 </html>
